Bug 420348 - Misleading and confusing options under Desktop Session
Summary: Misleading and confusing options under Desktop Session
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_smserver (other bugs)
Version First Reported In: 5.18.4
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-04-20 18:56 UTC by Richard Llom
Modified: 2022-12-25 18:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
kcmsmserver screenshot with comments (89.43 KB, image/png)
2020-04-20 18:56 UTC, Richard Llom
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Llom 2020-04-20 18:56:15 UTC
Created attachment 127721 [details]
kcmsmserver screenshot with comments

SUMMARY
Change layout and title of options under Desktop Session.

STEPS TO REPRODUCE
Under System Settings -> Desktop Session: "On Login", 3. Options:
1. restore previous session
2. restore manually saved session
3. start with an empty session

Also see attached screenshots with comments.

OBSERVED RESULT
Option 1. and 2. actually do the same _on login_: they restore the last saved session.
The difference between 1. and 2. is actually that 1. saves the session on /logout/, whereas 2. adds an option in the start menu to manually save the session. (and I guess it doesn't save on logout?)

EXPECTED RESULT
The wording and placement of these option doesn't reflect the behavior. Especially with option 2., one could get the impression that one could choose from different manually saved session. So instead of the 3 listed options on login there are only two: restore session or empty session.

SUGGESTED FIX
A) Condense option under "On Login" to just two
o Restore session
o Start with empty session

B) New Section: "Session Saving"
□ Offer Save Session in Start Menu
□ Save Session on logout / leave(?)
(notice the squares as representing combo boxes)

SOFTWARE/OS VERSIONS
KDE Frameworks 5.69.0
Qt 5.14.2 (built against 5.14.2)
The xcb windowing system
Comment 1 Richard Llom 2020-04-20 18:58:40 UTC
Hey Nate, maybe you can take a look. Thanks. :-)
Comment 2 Nate Graham 2020-04-21 02:36:05 UTC
Yeah this isn't amazing. We need to redo the whole UI here, really.
Comment 3 Bug Janitor Service 2022-12-13 23:25:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1296
Comment 4 Nate Graham 2022-12-25 18:09:01 UTC
Git commit 248e8657341cdedfb1e445fe77f7ddf3ef8c00b3 by Nate Graham.
Committed on 25/12/2022 at 17:55.
Pushed by ngraham into branch 'master'.

kcms/ksmserver: Overhaul UI to clarify what options do

The options in this KCM are quite technical and could benefit from some
UI massagging to make sure they're comprehensible to the user.
Related: bug 431960
FIXED-IN: 5.27

M  +6    -0    kcms/ksmserver/kcmsmserver.cpp
M  +4    -0    kcms/ksmserver/kcmsmserver.h
M  +183  -116  kcms/ksmserver/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/248e8657341cdedfb1e445fe77f7ddf3ef8c00b3