kcms/ksmserver: Overhaul UI to clarify what options do

The options in this KCM are quite technical and could benefit from some
UI massagging to make sure they're comprehensible to the user.

BUG: 420348
BUG: 431960
FIXED-IN: 5.27